# meeqat

./: .gitignore  README.md  nuxt.config.ts  package.json  tsconfig.tsbuildinfo
.github/workflows/: ci.yml  release.yml
app/: app.config.ts  app.vue
app/assets/css/: main.css
app/components/: AppUpdateModal.vue  ColorToggle.vue  ConfirmDialog.vue  MeeqatMark.vue
app/components/prayer/: CalendarDrawer.vue  Card.vue  FavoriteLocations.vue  Footer.vue  Header.vue  HeroCard.vue  LocationControls.vue  LocationMapPicker.vue  LocationSelector.vue  Row.vue  (+8 more)
app/composables/: useAppUpdate.ts  useConfirm.ts  useDeviceHeading.ts  useFavoriteLocations.ts  useGeolocation.ts  useHijriCalendar.ts  useIslamicCalendar.ts  useMockTime.ts  useNotifications.ts  usePrayerService.ts  usePrayerTimes.ts  useTrayPopover.ts
app/constants/: cities.ts  countries.ts  methods.ts  prayers.ts
app/layouts/: default.vue  tray.vue
app/modules/: tauri.ts
app/pages/: index.vue  orbit-cue-lab.vue  orbit-lab.vue  prototypes.vue  tray.vue  widget-lab.vue
app/plugins/: tray.client.ts
app/utils/: api.ts  audio.ts  format.ts  qibla.ts  schemas.ts  store.ts  time.ts  types.ts
docs/plans/: 2026-02-05-location-display-and-multimonitor-tray-design.md  2026-02-05-location-display-and-multimonitor-tray.md  2026-03-24-modernization-refactor-design.md  2026-03-24-modernization-refactor-plan.md
scripts/: tauri-build.sh
src-tauri/: Cargo.toml  tauri.android.conf.json  tauri.conf.json  tauri.ios.conf.json
src-tauri/capabilities/: main.json  mobile.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/tauri-plugin-prayer-service/: Cargo.toml  build.rs
src-tauri/tauri-plugin-prayer-service/android/: build.gradle.kts  consumer-rules.pro  proguard-rules.pro
src-tauri/tauri-plugin-prayer-service/android/src/main/: AndroidManifest.xml
src-tauri/tauri-plugin-prayer-service/android/src/main/java/com/meeqat/plugin/prayerservice/: BootReceiver.kt  CountdownService.kt  DebugTimeProvider.kt  MeeqatOrbit.kt  PrayerForegroundService.kt  PrayerParcelable.kt  PrayerServicePlugin.kt  PrayerTimeUtils.kt  PrayerWidgetProvider.kt  WidgetKeepAliveWorker.kt  WidgetUpdateReceiver.kt
src-tauri/tauri-plugin-prayer-service/android/src/main/res/drawable/: ic_notification.xml  widget_background.xml  widget_current_row_bg.xml  widget_highlight_bg.xml  widget_prayer_row_bg.xml  widget_progress.xml
src-tauri/tauri-plugin-prayer-service/android/src/main/res/layout/: widget_prayer_4x2.xml  widget_prayer_4x3.xml  widget_prayer_4x4.xml  widget_prayer_compact.xml  widget_prayer_glance.xml  widget_prayer_wide.xml  widget_times_list.xml  widget_times_strip.xml
src-tauri/tauri-plugin-prayer-service/android/src/main/res/values/: strings.xml
src-tauri/tauri-plugin-prayer-service/android/src/main/res/xml/: prayer_widget_info.xml
src-tauri/tauri-plugin-prayer-service/guest-js/: index.ts
src-tauri/tauri-plugin-prayer-service/ios/: Package.swift
src-tauri/tauri-plugin-prayer-service/ios/Sources/: PrayerServicePlugin.swift
src-tauri/tauri-plugin-prayer-service/permissions/: default.toml
src-tauri/tauri-plugin-prayer-service/permissions/autogenerated/: reference.md
src-tauri/tauri-plugin-prayer-service/permissions/autogenerated/commands/: check_battery_optimization.toml  clear_mock_time_offset.toml  get_mock_time_offset.toml  set_mock_time_offset.toml  update_prayer_times.toml
src-tauri/tauri-plugin-prayer-service/permissions/schemas/: schema.json
src-tauri/tauri-plugin-prayer-service/src/: commands.rs  error.rs  lib.rs  mobile.rs  models.rs
(+25 files in other folders)
