[package]
name = "meeqat-app"
version = "1.9.1"
description = "Meeqat App"
authors = [ "KazBrekker1" ]
repository = "https://github.com/KazBrekker1/meeqat"
edition = "2021"
license = "MIT"

[lib]
name = "meeqat_app_lib"
crate-type = [
  "staticlib",
  "cdylib",
  "rlib"
]

[build-dependencies.tauri-build]
version = "2.3.0"
features = [ ]

[dependencies]
tauri-plugin-notification = "2.3.0"
tauri-plugin-store = "2.3.0"
tauri-plugin-os = "2"
tauri-plugin-prayer-service = { path = "./tauri-plugin-prayer-service" }
serde_json = "1"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-positioner = "2"

[dependencies.tauri]
version = "2.9.1"
features = [
  "tray-icon",
  "unstable",
  "image-ico",
  "image-png"
]

[dependencies.serde]
version = "1"
features = [ "derive" ]
