[package]
name = "meeqat-app"
version = "2.4.1"
description = "Meeqat App"
authors = [ "KazBrekker1" ]
repository = "https://github.com/KazBrekker1/meeqat"
edition = "2021"
license = "MIT"

[lib]
name = "meeqat_app_lib"
crate-type = [
  "staticlib",
  "cdylib",
  "rlib"
]

[build-dependencies.tauri-build]
version = "2"
features = [ ]

[dependencies]
tauri-plugin-notification = "2"
tauri-plugin-store = "2"
tauri-plugin-os = "2"
tauri-plugin-prayer-service = { path = "./tauri-plugin-prayer-service" }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-positioner = { version = "2", features = ["tray-icon"] }

[dependencies.tauri]
version = "2.9.1"
features = [
  "tray-icon",
  "unstable",
  "image-ico",
  "image-png"
]
