[package]
name = "tauri-plugin-prayer-service"
version = "0.1.0"
edition = "2021"
description = "Tauri plugin for Android foreground service with prayer time notifications"
license = "MIT"
links = "tauri-plugin-prayer-service"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
tauri = "2.9.1"
serde = { version = "1", features = ["derive"] }
thiserror = "1"

[build-dependencies]
tauri-plugin = { version = "2", features = ["build"] }
